--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+//<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="refresh" content="0; url=https://twitter.com/RippinReaper/status/731579761621786624" />
 <title>Test Page</title>
 </head>
 
 <body>
 
-Coffee
-
-<img src="Test-Image.png" width="234" height="156" align="middle" />
 
 </body>
 </html>
+
+
