--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
-<meta http-equiv="refresh" content="0; url=https://twitter.com/RippinReaper/status/731579761621786624" />
+<meta http-equiv="refresh" content="0; url=http://www.distinct.pictures" />
 <title>Test Page</title>
 </head>
 
